--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,16 @@
 extends layout
 
+block head
+  link(rel="stylesheet" href="/stylesheets/index.css")
+
+block header
+  include header.pug
+
 block content
-  h1= title
-  p Welcome to #{title}
-  ul
-    - var list=['a','b','c']
-    each l in list
-      li=l
+  div.max-w-800.p-10.m-lr-auto
+    h1= title
+    p Welcome to #{title}
+    ul
+      - var list=['a','b','c']
+      each l in list
+        li=l
