Add mocha.js test module

--- a/public/stylesheets/share.sass
+++ b/public/stylesheets/share.sass
@@ -2,4 +2,12 @@
 	display: flex
 	margin: 0 auto
 	justify-content: space-between
-	font-size: 2em
+	font-size: 1.5em
+
+a
+	&:link
+		text-decoration: none
+	&:hover
+		text-decoration: underline
+
+
