--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,7 +2,13 @@
   display: flex;
   margin: 0 auto;
   justify-content: space-between;
-  font-size: 2em; }
+  font-size: 1.5em; }
+
+a:link {
+  text-decoration: none; }
+
+a:hover {
+  text-decoration: underline; }
 
 .p-10 {
   padding: 10px; }
